tmp table alignment fix

--- a/_static/morpheusTheme.css
+++ b/_static/morpheusTheme.css
@@ -262,6 +262,7 @@ html.writer-html5 .rst-content dl.field-list>dt, html.writer-html5 .rst-content 
 html.writer-html5 .rst-content dl.field-list>dd, html.writer-html5 .rst-content dl.field-list>dt, html.writer-html5 .rst-content dl.footnote>dd, html.writer-html5 .rst-content dl.footnote>dt {
     margin-bottom: 0;
     padding-right: 2rem;
+    min-width: 300px;
     /* font-weight: 100; */
 }
 
